Remove CREATE & DELETE action for TOPIC resource from topic-data-admin role
With only this role one should not have the permission to create or delete topic

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -148,8 +148,10 @@ akhq:
         - resources: [ "TOPIC", "TOPIC_DATA" ]
           actions: [ "READ", "CREATE", "UPDATE", "DELETE", "READ_CONFIG", "ALTER_CONFIG" ]
       topic-data-admin:
-        - resources: [ "TOPIC", "TOPIC_DATA" ]
+        - resources: [ "TOPIC_DATA" ]
           actions: [ "READ", "CREATE", "DELETE" ]
+        - resources: [ "TOPIC" ]
+          actions: [ "READ" ]
       consumer-group-admin:
         - resources: [ "CONSUMER_GROUP" ]
           actions: [ "READ", "UPDATE_OFFSET", "DELETE", "DELETE_OFFSET" ]
