--- a/helm/akhq/templates/networkpolicy.yaml
+++ b/helm/akhq/templates/networkpolicy.yaml
@@ -8,9 +8,9 @@ metadata:
     helm.sh/chart: {{ include "akhq.chart" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
-     {{- with .Values.labels }}
-       {{- toYaml . | nindent 4 }}
-     {{- end }}
+    {{- range $key, $value := .Values.networkPolicy.labels }}
+    {{ $key }}: {{ $value | quote }}
+    {{- end }}
 spec:
   policyTypes:
     - Ingress
