--- a/client/build.gradle
+++ b/client/build.gradle
@@ -11,6 +11,7 @@ frontend {
     nodeVersion = '18.18.0'
     assembleScript = 'run build'
     maxDownloadAttempts = 5
+    verboseModeEnabled = true
 }
 
 tasks.register('copyClientResources', Copy) {
