fix(masking): fixes 2 issues - one which hides non-structured objects rather than shows them anyway, and fixes multi-nested fields

--- a/src/test/resources/application-json-mask-by-default-data-masking.yml
+++ b/src/test/resources/application-json-mask-by-default-data-masking.yml
@@ -11,3 +11,4 @@ akhq:
             - address.country
             - metadata.trusted
             - metadata.rating
+            - metadata.other.shouldBeUnmasked
