--- a/src/test/resources/application-json-show-by-default-data-masking.yml
+++ b/src/test/resources/application-json-show-by-default-data-masking.yml
@@ -10,3 +10,4 @@ akhq:
             - dateOfBirth
             - address.firstLine
             - address.town
+            - metadata.other.shouldBeMasked
