fix(helm): resolve conflict with extraEnv AKHQ_CONFIGURATION and ConfigMap configuration

--- a/helm/akhq/templates/configmap.yaml
+++ b/helm/akhq/templates/configmap.yaml
@@ -1,4 +1,9 @@
 {{- if .Values.configuration }}
+{{- range .Values.extraEnv }}
+{{- if eq .name "AKHQ_CONFIGURATION" }}
+{{- fail "Can't use AKHQ_CONFIGURATION extraEnv together with ConfigMap configuration." }}
+{{- end }}
+{{- end }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
