--- a/docs/package.json
+++ b/docs/package.json
@@ -10,29 +10,30 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.6.5",
-    "bootstrap": " 5.3.2",
+    "axios": "^1.7.9",
+    "bootstrap": "^5.3.3",
     "font-awesome": "^4.7.0",
     "github-contributors-list": "^1.2.5",
-    "vuepress": "2.0.0-rc.15"
+    "vuepress": "v2.0.0-rc.19"
   },
   "devDependencies": {
-    "@vuepress/bundler-vite": "^2.0.0-rc.0",
-    "@vuepress/plugin-active-header-links": "2.0.0-rc.0",
-    "@vuepress/plugin-back-to-top": "2.0.0-rc.0",
-    "@vuepress/plugin-git": "2.0.0-rc.0",
-    "@vuepress/plugin-google-analytics": "2.0.0-rc.0",
-    "@vuepress/plugin-medium-zoom": "2.0.0-rc.0",
-    "@vuepress/plugin-nprogress": "2.0.0-rc.0",
-    "@vuepress/plugin-prismjs": "2.0.0-rc.0",
-    "@vuepress/plugin-register-components": "2.0.0-rc.0",
-    "@vuepress/plugin-search": "2.0.0-rc.0",
-    "@vuepress/theme-default": "2.0.0-rc.0",
-    "glob": "^10.3.10",
+    "@vuepress/bundler-vite": "^v2.0.0-rc.19",
+    "@vuepress/plugin-active-header-links": "v2.0.0-rc.74",
+    "@vuepress/plugin-back-to-top": "v2.0.0-rc.74",
+    "@vuepress/plugin-git": "v2.0.0-rc.68",
+    "@vuepress/plugin-google-analytics": "v2.0.0-rc.66",
+    "@vuepress/plugin-medium-zoom": "v2.0.0-rc.74",
+    "@vuepress/plugin-nprogress": "v2.0.0-rc.74",
+    "@vuepress/plugin-prismjs": "v2.0.0-rc.74",
+    "@vuepress/plugin-register-components": "v2.0.0-rc.66",
+    "@vuepress/plugin-search": "v2.0.0-rc.74",
+    "@vuepress/theme-default": "v2.0.0-rc.74",
+    "glob": "^11.0.1",
     "http-server": "^14.1.1",
-    "inflection": "^3.0.0",
+    "inflection": "^3.0.2",
     "lodash.sortby": "^4.7.0",
     "markdown-it-meta": "0.0.1",
-    "markdown-it-title": "^4.0.0"
+    "markdown-it-title": "^4.0.0",
+    "sass-embedded": "^1.83.4"
   }
 }
