fix(masking): Various performance and readability fixes

--- a/src/test/resources/application-json-mask-by-default-data-masking.yml
+++ b/src/test/resources/application-json-mask-by-default-data-masking.yml
@@ -11,4 +11,6 @@ akhq:
             - address.country
             - metadata.trusted
             - metadata.rating
+            - metadata.notes
             - metadata.other.shouldBeUnmasked
+            - metadata.other.arrayToShow
