--- a/src/test/resources/application-json-show-by-default-data-masking.yml
+++ b/src/test/resources/application-json-show-by-default-data-masking.yml
@@ -11,3 +11,4 @@ akhq:
             - address.firstLine
             - address.town
             - metadata.other.shouldBeMasked
+            - metadata.other.arrayToMask
