--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
   "homepage": "./ui",
   "packageManager": "npm@9.8.1",
   "dependencies": {
+    "@date-fns/utc": "^2.1.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@popperjs/core": "^2.11.8",
@@ -13,6 +14,7 @@
     "axios": "^1.7.4",
     "bootstrap": "^5.3.3",
     "buffer": "^6.0.3",
+    "date-fns": "^3.6.0",
     "event-source-polyfill": "^1.0.31",
     "history": "^5.3.0",
     "lodash": "^4.17.21",
@@ -55,7 +57,6 @@
     "@testing-library/user-event": "^14.5.2",
     "@vitejs/plugin-react": "^4.2.1",
     "convert-units": "^2.3.4",
-    "date-fns": "^3.6.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
@@ -63,7 +64,6 @@
     "joi": "^17.12.3",
     "joi-browser": "^13.4.0",
     "jsdom": "^24.0.0",
-    "moment": "^2.30.1",
     "prettier": "^3.2.5",
     "react-bootstrap": "^2.10.2",
     "react-datepicker": "^6.8.0",
